# 3MF-Agent-Tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
skills/bambu-3mf/: SKILL.md
skills/bambu-3mf/references/: file-format.md
skills/bambu-3mf/scripts/: bambu3mf.py
src/bambu3mf/: __init__.py  bambu3mf.py
tests/: test_bambu3mf.py
