[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bambu3mf"
version = "2.0.0"
description = "Read, modify, and write Bambu Studio .3mf project files with byte-perfect round-trip fidelity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "lostprojects" }
]
keywords = ["3mf", "bambu", "bambulab", "bambu-studio", "3d-printing", "slicer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/lostprojects/3MF-Agent-Tools"
Repository = "https://github.com/lostprojects/3MF-Agent-Tools"
Issues = "https://github.com/lostprojects/3MF-Agent-Tools/issues"

[project.scripts]
bambu3mf = "bambu3mf.bambu3mf:main"

[tool.setuptools.packages.find]
where = ["src"]
